test/cases/compile_errors/issue_9346_return_outside_of_function_scope.zig
pub const empty = return 1;

// error
// backend=stage2
// target=native
//
// :1:19: error: 'return' outside function scope
